--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Get CatTalk" />
 	<meta property="og:image" content="images/sqr.jpg" />
-	<meta property="og:url" content="http://windmill0503.github.io/get-cattalk" />
+	<meta property="og:url" content="https://windmill0503.github.io/get-cattalk" />
 	<meta property="og:site_name" content="Get CatTalk" />
 	<meta property="og:description" content="原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序阅读可以带来更好的体验和互动。" />
 	<meta name="twitter:title" content="Get CatTalk" />
 	<meta name="twitter:image" content="images/sqr.jpg" />
-	<meta name="twitter:url" content="http://windmill0503.github.io/get-cattalk" />
+	<meta name="twitter:url" content="https://windmill0503.github.io/get-cattalk" />
 	<meta name="twitter:card" content="CatTalk" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -60,9 +60,10 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
 					<h1 id="fh5co-logo"><a href="index.html">小喵心语 CatTalk</a></h1>
-					<h2>原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序阅读可以带来更好的体验和互动。</h2>
-					<p> <a class="btn btn-wechat minipp"><i class="icon-wechat"></i> 小程序</a>
-					<a class="btn btn-cattalk" href="http://cattalk.nousbuild.org/"><i class="icon-share"></i> 官方网站</a> </p>
+					<h2>原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序端可以带来更好的阅读体验和互动留言。</h2>
+					<p> <a class="btn btn-wechat wxminipp"><i class="icon-wechat"></i> 小程序</a>
+					<a class="btn btn-qq qqminipp"><i class="icon-qq"></i> 小程序</a> </p>
+					<p> <a class="btn btn-cattalk" href="https://cattalk.nousbuild.org/"><i class="icon-share"></i> 小喵网站</a> </p>
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-6">
@@ -77,7 +78,7 @@
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>那些年的校园与我们</h2>
-							<p>小喵最新校园原创漫画作品，漫画内容来自并改编于我们在2009-2014年的校园真实趣事。</p>
+							<p>小喵最新原创校园漫画作品，漫画内容来自并改编于我们在2009-2014年的校园真实趣事。</p>
 						</div>
 					</div>
 				</div>
@@ -91,8 +92,8 @@
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Doki Doki Literature Club!</h2>
-							<p>背景音乐由 Dan Salvato 创作，烘托普通的校园日常。</p>
+							<h2>搭配背景音乐</h2>
+							<p>每一话都搭配了与内容契合的背景音乐，增强代入感。背景音乐由 Dan Salvato, Project Lights 等创作。</p>
 						</div>
 					</div>
 				</div>
@@ -107,7 +108,7 @@
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>人物表情包</h2>
-							<p>在小程序中你可以方便的保存各个人物，以及互动人物的表情包。此外还可以通过内置的 “小喵信件” 定制表情包。</p>
+							<p>在小程序中你可以方便的转发与保存各个人物、互动人物的表情。此外还可以通过内置的 “小喵信件” 写信定制表情包。</p>
 						</div>
 					</div>
 				</div>
@@ -121,8 +122,8 @@
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>互动留言</h2>
-							<p>现在可以直接授权登录微信账号，参与漫画留言与互动。</p>
+							<h2>漫画留言</h2>
+							<p>现在你可以直接授权登录 QQ 或 微信账号，直接参与漫画的留言与互动。</p>
 						</div>
 					</div>
 				</div>
@@ -137,13 +138,43 @@
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>小喵信件</h2>
-							<p>你可以通过小程序内置的 “小喵信件” 与小喵联系，定制表情包或是反馈建议和问题。</p>
+							<p>你可以在个人中心通过小程序内置的 “小喵信件” 与小喵联系，定制表情包或是反馈建议和意见。</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-md-pull-6">
 					<div class="fh5co-img">
 						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_7.jpg" alt=""> </figure>
+					</div>
+				</div>
+			</div>
+			<div class="row fh5co-feature fh5co-reverse">
+				<div class="col-md-6">
+					<div class="fh5co-copy">
+						<div class="fh5co-copy-inner">
+							<h2>留言头像</h2>
+							<p>现在你可以选择不同系列的头像，作为自己的留言展示头像。现共有 4 种系列头像可供选择。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="fh5co-img">
+						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_8.jpg" alt=""> </figure>
+					</div>
+				</div>
+			</div>
+			<div class="row fh5co-feature last-feature">
+				<div class="col-md-6 col-md-push-6">
+					<div class="fh5co-copy">
+						<div class="fh5co-copy-inner">
+							<h2>更多彩蛋</h2>
+							<p>小程序内置了很多彩蛋，比如跟 “部长” 玩儿猜丁壳，随手撸猫，与卡通人物互动等，更多彩蛋等你发现...</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-md-pull-6">
+					<div class="fh5co-img">
+						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_9.jpg" alt=""> </figure>
 					</div>
 				</div>
 			</div>
@@ -155,11 +186,11 @@
 		<footer id="footer">
 			<div class="container">
 				<div class="col-md-12 text-center">
-					<p class="copyright">Copyright © <span id="footerYear">2018</span> <a href="http://cattalk.nousbuild.org">CatTalk</a> All rights reserved.</p>
+					<p class="copyright">Copyright © <span id="footerYear">2018</span> <a href="https://cattalk.nousbuild.org">CatTalk</a> All rights reserved.</p>
 					<ul class="fh5co-social">
+						<li><a href="https://cattalk.nousbuild.org/"><i class="icon-home sa-color"></i></a></li>
+						<li><a><i class="icon-qrcode getminipp qrcode-color"></i></a></li>
 						<li><a href="https://github.com/windmill0503/get-cattalk"><i class="icon-github github-color"></i></a></li>
-						<li><a><i class="icon-wechat minipp wechat-color"></i></a></li>
-						<li><a href="http://cattalk.nousbuild.org/"><i class="icon-link sa-color"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -184,18 +215,37 @@
 	<script type="text/javascript" src="js/sweetalert.min.js"></script>
 	<script type="text/javascript">
 		$(function() {
-
-			document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
-
-			$(".minipp").click(function() {
+			$(".wxminipp").click(function() {
 				swal({
-					title: '打开<span>小程序</span>',
-					text: '<b style="color: #51B674">使用微信扫码</b> <br><br> <img src="images/sqr.jpg" width="200px" height="200px">',
+					title: '微信<span>小程序</span>',
+					text: '<b style="color: #50B674">使用「微信」扫码打开</b> <br><br> <img src="images/wxqr.jpg" width="200px" height="200px">',
 					html: true
 				});
 			});
-
 		});
+
+		$(function() {
+			$(".qqminipp").click(function() {
+				swal({
+					title: 'QQ<span>小程序</span>',
+					text: '<b style="color: #68A6E1">使用「QQ」扫码打开</b> <br><br> <img src="images/qqqr.jpg" width="200px" height="200px">',
+					html: true
+				});
+			});
+		});
+
+		$(function () {
+			$(".getminipp").click(function () {
+				swal({
+					title: '<a style="color: #333333">小程序端</a>',
+					text: '<a style="color: #333333">在小程序端看漫画体验更好，支持 QQ 和 微信小程序。<br><br><img src="images/minipp.jpg" width="320px" he1ght="160px"></a>',
+					imageUrl: "images/my-minipp.jpg",
+					html: true
+				});
+			});
+		});
+
+		document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
 	</script>
 	<!-- end sweetAlert js -->
 
