--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>更多彩蛋</h2>
-							<p>小程序内置了很多彩蛋，比如跟 “部长” 玩儿猜丁壳，随手撸猫，与卡通人物互动等，更多彩蛋等你发现...</p>
+							<h2>订阅提醒</h2>
+							<p>每次看完漫画后，记得顺手点击一下“订阅一次提醒”，如果漫画更新啦，小喵会提醒你哒～</p>
 						</div>
 					</div>
 				</div>
