--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<p class="copyright">Copyright © <span id="footerYear">2018</span> <a href="https://cattalk.nousbuild.org">CatTalk</a> All rights reserved.</p>
 					<ul class="fh5co-social">
 						<li><a href="https://cattalk.nousbuild.org/"><i class="icon-home sa-color"></i></a></li>
-						<li><a><i class="icon-qrcode getminipp qrcode-color"></i></a></li>
+						<li><a><i class="icon-qrcode getminipp qrcode-color" style="cursor: pointer;"></i></a></li>
 						<li><a href="https://github.com/windmill0503/get-cattalk"><i class="icon-github github-color"></i></a></li>
 					</ul>
 				</div>
