--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Get CatTalk</title>
+	<title>获取小喵心语漫画小程序</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="CatTalk" />
 	<meta name="keywords" content="原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序阅读可以带来更好的体验和互动。" />
 
 	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Get CatTalk" />
-	<meta property="og:image" content="images/sqr.jpg" />
-	<meta property="og:url" content="https://windmill0503.github.io/get-cattalk" />
-	<meta property="og:site_name" content="Get CatTalk" />
+	<meta property="og:title" content="获取小喵心语漫画小程序" />
+	<meta property="og:image" content="images/logo.png" />
+	<meta property="og:url" content="https://github.nousbuild.com/get-cattalk/" />
+	<meta property="og:site_name" content="获取小喵心语漫画小程序" />
 	<meta property="og:description" content="原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序阅读可以带来更好的体验和互动。" />
-	<meta name="twitter:title" content="Get CatTalk" />
-	<meta name="twitter:image" content="images/sqr.jpg" />
-	<meta name="twitter:url" content="https://windmill0503.github.io/get-cattalk" />
+	<meta name="twitter:title" content="获取小喵心语漫画小程序" />
+	<meta name="twitter:image" content="images/logo.png" />
+	<meta name="twitter:url" content="https://github.nousbuild.com/get-cattalk/" />
 	<meta name="twitter:card" content="CatTalk" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -55,14 +55,60 @@
 </head>
 
 <body>
+	<a id="cattalk" href="https://cattalk.nousbuild.org/" title="GitHub">
+		<svg width="160px" height="160px" viewBox="0 0 160 160">
+			<title>logo</title>
+			<g id="card" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				<g id="logo">
+					<polygon id="background" fill="#000000" points="0 0 160 0 160 160"></polygon>
+					<g id="cattalk" transform="translate(103.000000, 61.000000) rotate(45.000000) translate(-103.000000, -61.000000) translate(70.000000, 31.000000)" fill="#FFFFFF" fill-rule="nonzero">
+						<path d="M8.53524918,60 L58.1841034,60 C59.9959285,60 61.7272955,59.2591475 62.9688599,57.9528493 C64.2104243,56.646551 64.8519685,54.8906815 64.7418132,53.1003782 L63.302113,29.4768971 C63.302113,29.4768971 67.820941,5.27261199 65.1620726,5.53623933 C62.5032041,5.79986667 49.6457654,17.6383819 49.6457654,17.6383819 C49.6457654,17.6383819 32.1446691,13.1649555 23.4066039,15.0103468 C23.4066039,15.0103468 22.3455532,-4.72463101 16.9113088,1.06281292 C12.8127401,5.42914072 4.19950446,36.7266489 0.213282342,51.8522675 C-0.301063007,53.80189 0.126429486,55.8774144 1.37077881,57.4720437 C2.61512814,59.0666729 4.53579819,60 6.57126501,60 L8.53524918,60 Z" id="路径"></path>
+						<ellipse id="椭圆形" transform="translate(52.344453, 31.231542) rotate(-87.030000) translate(-52.344453, -31.231542) " cx="52.3444532" cy="31.2315417" rx="7.4886641" ry="10.6645497"></ellipse>
+						<ellipse id="椭圆形" transform="translate(18.202148, 28.466824) rotate(-86.980000) translate(-18.202148, -28.466824) " cx="18.2021477" cy="28.4668244" rx="7.48454493" ry="10.8622702"></ellipse>
+						<circle id="椭圆形" cx="19.5649712" cy="27.1715729" r="6.5"></circle>
+						<circle id="椭圆形" cx="49.9705627" cy="27.8786797" r="6.5"></circle>
+						<circle id="椭圆形" cx="13.2010101" cy="27.1715729" r="4"></circle>
+						<circle id="椭圆形" cx="47.1421356" cy="30" r="4"></circle>
+						<circle id="椭圆形" cx="57.7487373" cy="34.2426407" r="1.5"></circle>
+						<circle id="椭圆形" cx="22.3933983" cy="32.8284271" r="1.5"></circle>
+						<path d="M30.6213203,27.0857864 L30.9865607,28.0828848 C32.094192,31.1248136 34.0355241,30.6301594 34.8851051,27.0857864 L34.8851051,27.0857864 L35.3059255,28.4178475 C36.2547566,31.4247221 38.6049992,29.9407594 39.6213203,27.0857864 L39.6213203,27.0857864" id="路径" stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+						<path d="M38.4062873,10.104816 C38.4062873,10.104816 44.6784534,4.95515938 43.0259789,2.18226733 C41.3735044,-0.590624724 37.9841223,3.58059718 37.9841223,3.58059718 C37.9841223,3.58059718 36.592988,0.522493372 34.365565,1.20383256 C32.1381419,1.88517175 33.3805132,8.17171416 38.4062873,10.104816 Z" id="路径"></path>
+					</g>
+				</g>
+			</g>
+		</svg>
+	</a>
+
+	<div class="element element-1">
+		<img src="images/ele-1.png" alt="element">
+	</div>
+	<div class="element element-2">
+		<img src="images/ele-2.png" alt="element">
+	</div>
+	<div class="element element-3">
+		<img src="images/ele-3.png" alt="element">
+	</div>
+	<div class="element element-4">
+		<img src="images/ele-4.png" alt="element">
+	</div>
+	<div class="element element-5">
+		<img src="images/ele-5.png" alt="element">
+	</div>
+	<div class="element element-6">
+		<img src="images/ele-6.png" alt="element">
+	</div>
+	<div class="element element-7">
+		<img src="images/ele-7.png" alt="element">
+	</div>
+
 	<header id="fh5co-header">
 		<div class="container">
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
-					<h1 id="fh5co-logo"><a href="index.html">小喵心语 CatTalk</a></h1>
+					<h1 id="fh5co-logo"><a href="https://github.nousbuild.com/get-cattalk/">小喵心语 CatTalk</a></h1>
 					<h2>原创校园漫画《那些年的校园与我们》小程序发行平台，使用小程序端可以带来更好的阅读体验和互动留言。</h2>
-					<p> <a class="btn btn-wechat wxminipp"><i class="icon-wechat"></i> 小程序</a>
-					<a class="btn btn-qq qqminipp"><i class="icon-qq"></i> 小程序</a> </p>
+					<p> <a class="btn btn-wechat wxminipp"><i class="icon-wechat"></i> WeChat</a>
+					<a class="btn btn-qq qqminipp"><i class="icon-qq"></i> QQ / TIM</a> </p>
 					<p> <a class="btn btn-cattalk" href="https://cattalk.nousbuild.org/"><i class="icon-share"></i> 小喵网站</a> </p>
 				</div>
 			</div>
@@ -73,6 +119,7 @@
 	</header>
 	<div id="main">
 		<div class="container">
+
 			<div class="row fh5co-feature">
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
@@ -88,6 +135,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row fh5co-feature fh5co-reverse">
 				<div class="col-md-6">
 					<div class="fh5co-copy">
@@ -103,6 +151,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row fh5co-feature">
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
@@ -118,12 +167,13 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row fh5co-feature fh5co-reverse">
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>漫画留言</h2>
-							<p>现在你可以直接授权登录 QQ 或 微信账号，直接参与漫画的留言与互动。</p>
+							<p>现在你可以直接授权登录 QQ 或 微信账号，参与到漫画的留言与互动之中。</p>
 						</div>
 					</div>
 				</div>
@@ -133,12 +183,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="row fh5co-feature last-feature">
+
+			<div class="row fh5co-feature">
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>小喵信件</h2>
-							<p>你可以在个人中心通过小程序内置的 “小喵信件” 与小喵联系，定制表情包或是反馈建议和意见。</p>
+							<h2>我的留言</h2>
+							<p>为了避免违规，所有前端展示留言都要审核通过后方可展示。用户可以在 “我的留言” 页面查看留言状态，或管理自己的留言。</p>
 						</div>
 					</div>
 				</div>
@@ -148,12 +199,13 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row fh5co-feature fh5co-reverse">
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>留言头像</h2>
-							<p>现在你可以选择不同系列的头像，作为自己的留言展示头像。现共有 4 种系列头像可供选择。</p>
+							<p>现在你可以选择不同系列的头像，作为自己的留言展示头像。现共有 5 种系列头像可供选择。</p>
 						</div>
 					</div>
 				</div>
@@ -163,6 +215,39 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row fh5co-feature">
+				<div class="col-md-6 col-md-push-6">
+					<div class="fh5co-copy">
+						<div class="fh5co-copy-inner">
+							<h2>分享卡片</h2>
+							<p>你可以非常方便的通过 QQ / 微信与好友分享漫画章节或人物表情包等相关内容。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-md-pull-6">
+					<div class="fh5co-img">
+						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_9.jpg" alt=""> </figure>
+					</div>
+				</div>
+			</div>
+
+			<div class="row fh5co-feature fh5co-reverse">
+				<div class="col-md-6">
+					<div class="fh5co-copy">
+						<div class="fh5co-copy-inner">
+							<h2>小喵信件</h2>
+							<p>你可以在个人中心通过小程序内置的 “小喵信件” 与小喵联系，定制表情包或是反馈建议和意见。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="fh5co-img">
+						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_10.jpg" alt=""> </figure>
+					</div>
+				</div>
+			</div>
+
 			<div class="row fh5co-feature last-feature">
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
@@ -174,23 +259,21 @@
 				</div>
 				<div class="col-md-6 col-md-pull-6">
 					<div class="fh5co-img">
-						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_9.jpg" alt=""> </figure>
+						<figure class="fh5co-figure animate-box"> <img class="img-2" src="images/screenshot_11.jpg" alt=""> </figure>
 					</div>
 				</div>
 			</div>
-
-			<!-- END feature -->
 
 		</div>
 
 		<footer id="footer">
 			<div class="container">
 				<div class="col-md-12 text-center">
-					<p class="copyright">Copyright © <span id="footerYear">2018</span> <a href="https://cattalk.nousbuild.org">CatTalk</a> All rights reserved.</p>
+					<p class="copyright">Copyright © <span id="footerYear">2018</span> <a href="https://cattalk.nousbuild.org">CatTalk</a>. All rights reserved.</p>
 					<ul class="fh5co-social">
-						<li><a href="https://cattalk.nousbuild.org/"><i class="icon-home sa-color"></i></a></li>
-						<li><a><i class="icon-qrcode getminipp qrcode-color" style="cursor: pointer;"></i></a></li>
-						<li><a href="https://github.com/windmill0503/get-cattalk"><i class="icon-github github-color"></i></a></li>
+						<li><a href="https://cattalk.nousbuild.org/" title="CatTalk Home Page"><i class="icon-home sa-color"></i></a></li>
+						<li><a title="Get Minipp"><i class="icon-qrcode getminipp qrcode-color" style="cursor: pointer;"></i></a></li>
+						<li><a href="https://github.com/windmill0503" title="Github Repo"><i class="icon-github github-color"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -214,6 +297,8 @@
 	<!-- start sweetAlert js -->
 	<script type="text/javascript" src="js/sweetalert.min.js"></script>
 	<script type="text/javascript">
+		document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
+
 		$(function() {
 			$(".wxminipp").click(function() {
 				swal({
@@ -244,10 +329,7 @@
 				});
 			});
 		});
-
-		document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
 	</script>
-	<!-- end sweetAlert js -->
 
 </body>
 
