--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 					<ul class="fh5co-social">
 						<li><a href="https://cattalk.nousbuild.org/" title="CatTalk Home Page"><i class="icon-home sa-color"></i></a></li>
 						<li><a title="Get Minipp"><i class="icon-qrcode getminipp qrcode-color" style="cursor: pointer;"></i></a></li>
-						<li><a href="https://github.com/windmill0503" title="Github Repo"><i class="icon-github github-color"></i></a></li>
+						<li><a href="https://github.com/pudding0503" title="Github Repo"><i class="icon-github github-color"></i></a></li>
 					</ul>
 				</div>
 			</div>
