--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 					<p> <a class="btn btn-wechat wxminipp"><i class="icon-wechat"></i> WeChat</a>
 					<a class="btn btn-qq qqminipp"><i class="icon-qq"></i> QQ / TIM</a> </p>
 					<p> <a class="btn btn-cattalk" href="https://cattalk.nousbuild.org/"><i class="icon-share"></i> 小喵网站</a> </p>
+					<p style="font-size: 14px; color: #fff;">由于 <a href="https://developers.weixin.qq.com/community/minihome/doc/0000a680588d3891fa2ec250c51401" target="_blank">微信</a> / <a href="https://cloud.tencent.com/document/faq/876/76378" target="_blank">QQ</a> 小程序在 2022 年 8 月 8 日强制调整了云开发的计费模式，v3 版小程序将移除所有云功能，这会导致一些功能下线。后续会通过渐进式应用 PWA 的方式回归。</p>
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-6">
